# InferCore

./: .gitignore  Cargo.toml  PERFORMANCE_OPTIMIZATION.md  README.md  generate_rope_test_data.py
src/: lib.rs  main.rs  util.rs
src/model/: attention.rs  config.rs  error.rs  mlp.rs  mod.rs  rms_norm.rs  rotary.rs  transformer.rs
src/tensor/: device.rs  dtype.rs  high_perf_tensor.rs  mod.rs  ops.rs  rotary.rs  tensor.rs
src/tokenizer/: error.rs  tokenizer.rs
tests/: basic.rs
tests/mlp_test_data/: reference_output.npy  reference_output_large_dims.npy  reference_output_single_token.npy  reference_output_small_dims.npy  w_down.npy  w_down_large_dims.npy  w_down_single_token.npy  w_down_small_dims.npy  w_gate.npy  w_gate_large_dims.npy  w_gate_single_token.npy  w_gate_small_dims.npy  w_up.npy  w_up_large_dims.npy  w_up_single_token.npy  w_up_small_dims.npy  x.npy  x_large_dims.npy  x_single_token.npy  x_small_dims.npy
tests/rms_norm_test_data/: rms_data_large_2d.npy  rms_data_medium_2d.npy  rms_data_single_row.npy  rms_data_small_2d.npy  rms_eps_large_2d.npy  rms_output_large_2d.npy  rms_output_medium_2d.npy  rms_output_single_row.npy  rms_output_small_2d.npy  rms_weight_large_2d.npy  rms_weight_medium_2d.npy  rms_weight_single_row.npy  rms_weight_small_2d.npy
tests/rope_qwen25_data/: qwen25_fp32_nooff_0_input.npy  qwen25_fp32_nooff_0_reference.npy  qwen25_fp32_nooff_10_input.npy  qwen25_fp32_nooff_10_reference.npy  qwen25_fp32_nooff_11_input.npy  qwen25_fp32_nooff_11_reference.npy  qwen25_fp32_nooff_12_input.npy  qwen25_fp32_nooff_12_reference.npy  qwen25_fp32_nooff_13_input.npy  qwen25_fp32_nooff_13_reference.npy  qwen25_fp32_nooff_14_input.npy  qwen25_fp32_nooff_14_reference.npy  qwen25_fp32_nooff_15_input.npy  (+387 more)
