[package]
name = "qwen3-infer"
version = "0.1.0"
description = "A Rust library for Qwen3 inference"
edition = "2024"
readme = "README.md"

# [lints]
# clippy.dbg_macro = "warn"
# clippy.implicit_clone = "warn"
# clippy.result_large_err = "allow"
# clippy.large_enum_variant = "allow"
# rust.unknown_lints = "deny"
# rust.unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[dependencies]
tokenizers = "0.15"
anyhow = "1.0"
proc-macro2 = "1.0.66"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
snafu = "0.8"
ndarray = "0.15"

