[package]
name = "qwen3-infer"
version = "0.1.0"
description = "A Rust library for Qwen3 inference"
edition = "2024"
readme = "README.md"

# [lints]
# clippy.dbg_macro = "warn"
# clippy.implicit_clone = "warn"
# clippy.result_large_err = "allow"
# clippy.large_enum_variant = "allow"
# rust.unknown_lints = "deny"
# rust.unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[dependencies]
tokenizers = "0.15"
anyhow = "1.0"
proc-macro2 = "1.0.66"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
snafu = "0.8"
ndarray = { version = "0.15.6", features = ["rayon"] }
rayon = "1.10.0"
safetensors = { version = "0.4.3"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiktoken-rs = "0.5.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tempfile = "3.10"
ndarray-npy = "0.8"
candle-core = "0.8"
candle-nn = "0.8"
approx = "0.5.1"
half = "2.6.0"

[dev-dependencies]
criterion = "0.5"
candle-transformers = "0.8"

# [[bench]]
# name = "tensor_benchmark"
# harness = false